--- a/src/templates/en/base.html
+++ b/src/templates/en/base.html
@@ -99,6 +99,10 @@ Our mission is to combine the raw stats and trends of the HTTP Archive with the 
 {% block reposts %}reposts{% endblock %}
 {% block replies %}replies{% endblock %}
 {% block mentions %}mentions{% endblock %}
+{% block likesAlt %}{% endblock %}
+{% block repostsAlt %}{% endblock %}
+{% block repliesAlt %}{% endblock %}
+{% block mentionsAlt %}{% endblock %}
 
 {% macro onTwitter(twitterHandle) %}@{{twitterHandle}} on Twitter{% endmacro %}
 {% macro onGitHub(gitHubHandle) %}{{gitHubHandle}} on GitHub{% endmacro %}
