--- a/src/templates/es/base.html
+++ b/src/templates/es/base.html
@@ -99,6 +99,10 @@
 {% block reposts %}reposts{% endblock %}
 {% block replies %}respuestas{% endblock %}
 {% block mentions %}menciones{% endblock %}
+{% block likesAlt %}{% endblock %}
+{% block repostsAlt %}{% endblock %}
+{% block repliesAlt %}{% endblock %}
+{% block mentionsAlt %}{% endblock %}
 
 {% macro onTwitter(twitterHandle) %}@{{twitterHandle}} en Twitter{% endmacro %}
 {% macro onGitHub(gitHubHandle) %}{{gitHubHandle}} en GitHub{% endmacro %}
