--- a/src/templates/fr/base.html
+++ b/src/templates/fr/base.html
@@ -99,6 +99,10 @@ Notre mission est de combiner les statistiques brutes et les tendances de HTTP A
 {% block reposts %}républications{% endblock %}
 {% block replies %}réponses{% endblock %}
 {% block mentions %}mentions{% endblock %}
+{% block likesAlt %}{% endblock %}
+{% block repostsAlt %}{% endblock %}
+{% block repliesAlt %}{% endblock %}
+{% block mentionsAlt %}{% endblock %}
 
 {% macro onTwitter(twitterHandle) %}@{{twitterHandle}} sur Twitter{% endmacro %}
 {% macro onGitHub(gitHubHandle) %}{{gitHubHandle}} sur GitHub{% endmacro %}
