--- a/src/templates/hi/base.html
+++ b/src/templates/hi/base.html
@@ -99,6 +99,10 @@
 {% block reposts %}रेपोस्ट{% endblock %}
 {% block replies %}जवाब{% endblock %}
 {% block mentions %}का उल्लेख है{% endblock %}
+{% block likesAlt %}{% endblock %}
+{% block repostsAlt %}{% endblock %}
+{% block repliesAlt %}{% endblock %}
+{% block mentionsAlt %}{% endblock %}
 
 {% macro onTwitter(twitterHandle) %}@{{twitterHandle}} Twitter पर{% endmacro %}
 {% macro onGitHub(gitHubHandle) %}{{gitHubHandle}} GitHub पर{% endmacro %}
