--- a/src/templates/ja/base.html
+++ b/src/templates/ja/base.html
@@ -99,6 +99,10 @@
 {% block reposts %}再投稿{% endblock %}
 {% block replies %}返信{% endblock %}
 {% block mentions %}言及{% endblock %}
+{% block likesAlt %}{% endblock %}
+{% block repostsAlt %}{% endblock %}
+{% block repliesAlt %}{% endblock %}
+{% block mentionsAlt %}{% endblock %}
 
 {% macro onTwitter(twitterHandle) %}Twitterの@{{twitterHandle}}{% endmacro %}
 {% macro onGitHub(gitHubHandle) %}GitHubの{{gitHubHandle}}{% endmacro %}
