--- a/src/templates/nl/base.html
+++ b/src/templates/nl/base.html
@@ -99,6 +99,10 @@
 {% block reposts %}herpublicaties{% endblock %}
 {% block replies %}antwoorden{% endblock %}
 {% block mentions %}vermeldingen{% endblock %}
+{% block likesAlt %}{% endblock %}
+{% block repostsAlt %}{% endblock %}
+{% block repliesAlt %}{% endblock %}
+{% block mentionsAlt %}{% endblock %}
 
 {% macro onTwitter(twitterHandle) %}@{{twitterHandle}} op Twitter{% endmacro %}
 {% macro onGitHub(gitHubHandle) %}{{gitHubHandle}} op GitHub{% endmacro %}
