--- a/src/templates/pt/base.html
+++ b/src/templates/pt/base.html
@@ -99,6 +99,10 @@ Nossa missão é combinar as estatísticas brutas e as tendências do HTTP Archi
 {% block reposts %}repostagens{% endblock %}
 {% block replies %}respostas{% endblock %}
 {% block mentions %}menções{% endblock %}
+{% block likesAlt %}{% endblock %}
+{% block repostsAlt %}{% endblock %}
+{% block repliesAlt %}{% endblock %}
+{% block mentionsAlt %}{% endblock %}
 
 {% macro onTwitter(twitterHandle) %}@{{twitterHandle}} no Twitter{% endmacro %}
 {% macro onGitHub(gitHubHandle) %}{{gitHubHandle}} no GitHub{% endmacro %}
