--- a/src/templates/zh-CN/base.html
+++ b/src/templates/zh-CN/base.html
@@ -99,6 +99,10 @@
 {% block reposts %}转帖{% endblock %}
 {% block replies %}回复{% endblock %}
 {% block mentions %}提及{% endblock %}
+{% block likesAlt %}{% endblock %}
+{% block repostsAlt %}{% endblock %}
+{% block repliesAlt %}{% endblock %}
+{% block mentionsAlt %}{% endblock %}
 
 {% macro onTwitter(twitterHandle) %}@{{twitterHandle}} 在 Twitter{% endmacro %}
 {% macro onGitHub(gitHubHandle) %}{{gitHubHandle}} 在 GitHub{% endmacro %}
