--- a/src/templates/it/base.html
+++ b/src/templates/it/base.html
@@ -99,6 +99,10 @@ La nostra missione è combinare le statistiche grezze e le tendenze del HTTP Arc
 {% block reposts %}ripubblica{% endblock %}
 {% block replies %}risposte{% endblock %}
 {% block mentions %}menzioni{% endblock %}
+{% block likesAlt %}{% endblock %}
+{% block repostsAlt %}{% endblock %}
+{% block repliesAlt %}{% endblock %}
+{% block mentionsAlt %}{% endblock %}
 
 {% macro onTwitter(twitterHandle) %}@{{twitterHandle}} su Twitter{% endmacro %}
 {% macro onGitHub(gitHubHandle) %}{{gitHubHandle}} su GitHub{% endmacro %}
