--- a/src/templates/uk/base.html
+++ b/src/templates/uk/base.html
@@ -95,10 +95,14 @@
 {% block repost %}репост{% endblock %}
 {% block reply %}відповідь{% endblock %}
 {% block mention %}згадка{% endblock %}
-{% block likes %}лайків{% endblock %}
+{% block likes %}репостів{% endblock %}
 {% block reposts %}репостів{% endblock %}
 {% block replies %}відповідей{% endblock %}
 {% block mentions %}згадок{% endblock %}
+{% block likesAlt %}Лайки{% endblock %}
+{% block repostsAlt %}репости{% endblock %}
+{% block repliesAlt %}відповіді{% endblock %}
+{% block mentionsAlt %}згадки{% endblock %}
 
 {% macro onTwitter(twitterHandle) %}@{{twitterHandle}} у Twitter{% endmacro %}
 {% macro onGitHub(gitHubHandle) %}{{gitHubHandle}} на GitHub{% endmacro %}
