--- a/src/templates/zh-TW/base.html
+++ b/src/templates/zh-TW/base.html
@@ -99,6 +99,10 @@
 {% block reposts %}轉帖{% endblock %}
 {% block replies %}回复{% endblock %}
 {% block mentions %}提及{% endblock %}
+{% block likesAlt %}{% endblock %}
+{% block repostsAlt %}{% endblock %}
+{% block repliesAlt %}{% endblock %}
+{% block mentionsAlt %}{% endblock %}
 
 {% macro onTwitter(twitterHandle) %}@{{twitterHandle}} Twitter{% endmacro %}
 {% macro onGitHub(gitHubHandle) %}{{gitHubHandle}} GitHub{% endmacro %}
