Better API and corrections

--- a/src/templates/ru/base.html
+++ b/src/templates/ru/base.html
@@ -95,7 +95,7 @@
 {% block repost %}репост{% endblock %}
 {% block reply %}ответ{% endblock %}
 {% block mention %}упоминание{% endblock %}
-{% block likes %}репостів{% endblock %}
+{% block likes %}лайків{% endblock %}
 {% block reposts %}репостов{% endblock %}
 {% block replies %}ответов{% endblock %}
 {% block mentions %}упоминание{% endblock %}
