--- a/src/templates/uk/base.html
+++ b/src/templates/uk/base.html
@@ -95,7 +95,7 @@
 {% block repost %}репост{% endblock %}
 {% block reply %}відповідь{% endblock %}
 {% block mention %}згадка{% endblock %}
-{% block likes %}репостів{% endblock %}
+{% block likes %}лайків{% endblock %}
 {% block reposts %}репостів{% endblock %}
 {% block replies %}відповідей{% endblock %}
 {% block mentions %}згадок{% endblock %}
