--- a/src/templates/ru/base.html
+++ b/src/templates/ru/base.html
@@ -99,7 +99,7 @@
 {% block reposts %}репостов{% endblock %}
 {% block replies %}ответов{% endblock %}
 {% block mentions %}упоминание{% endblock %}
-{% block likesAlt %}Лайки{% endblock %}
+{% block likesAlt %}лайки{% endblock %}
 {% block repostsAlt %}репоста{% endblock %}
 {% block repliesAlt %}ответа{% endblock %}
 {% block mentionsAlt %}упоминания{% endblock %}
