--- a/src/templates/uk/base.html
+++ b/src/templates/uk/base.html
@@ -99,7 +99,7 @@
 {% block reposts %}репостів{% endblock %}
 {% block replies %}відповідей{% endblock %}
 {% block mentions %}згадок{% endblock %}
-{% block likesAlt %}Лайки{% endblock %}
+{% block likesAlt %}лайки{% endblock %}
 {% block repostsAlt %}репости{% endblock %}
 {% block repliesAlt %}відповіді{% endblock %}
 {% block mentionsAlt %}згадки{% endblock %}
