Improved Russian Webmentions translations

--- a/src/templates/ru/base.html
+++ b/src/templates/ru/base.html
@@ -95,11 +95,11 @@
 {% block repost %}репост{% endblock %}
 {% block reply %}ответ{% endblock %}
 {% block mention %}упоминание{% endblock %}
-{% block likes %}лайків{% endblock %}
+{% block likes %}лайков{% endblock %}
 {% block reposts %}репостов{% endblock %}
 {% block replies %}ответов{% endblock %}
-{% block mentions %}упоминание{% endblock %}
-{% block likesAlt %}лайки{% endblock %}
+{% block mentions %}упоминаний{% endblock %}
+{% block likesAlt %}лайка{% endblock %}
 {% block repostsAlt %}репоста{% endblock %}
 {% block repliesAlt %}ответа{% endblock %}
 {% block mentionsAlt %}упоминания{% endblock %}
