Improved Spanish Translation
Just like "repost", I think "like" should be kept non-translated. There's no adequate translation of the word "likes" in Spanish. I also changed "mencionar" which is the verb form of the word.

--- a/src/templates/es/base.html
+++ b/src/templates/es/base.html
@@ -91,11 +91,11 @@
 {% block reactions %}reacciones{% endblock %}
 {% block source %}ver fuente{% endblock %}
 
-{% block like %}gusta{% endblock %}
+{% block like %}like{% endblock %}
 {% block repost %}repost{% endblock %}
 {% block reply %}respuesta{% endblock %}
-{% block mention %}mencionar{% endblock %}
-{% block likes %}gustos{% endblock %}
+{% block mention %}mención{% endblock %}
+{% block likes %}likes{% endblock %}
 {% block reposts %}reposts{% endblock %}
 {% block replies %}respuestas{% endblock %}
 {% block mentions %}menciones{% endblock %}
