Update to real text

--- a/src/templates/nl/accessibility_statement.html
+++ b/src/templates/nl/accessibility_statement.html
@@ -66,9 +66,9 @@
     We gebruiken Google Spreadsheets ook voor sommige interactieve visualisaties, die mogelijk ook niet voldoen aan WCAG-toegankelijkheidsnormen. Deze worden geladen via <code>iframes</code> en we leveren afbeeldingen voor al onze figuren, en tonen alleen interactieve visualisaties als de cliënt software dit ondersteunt. Als u een webbrowser gebruikt en u de interactieve visualisaties niet wilt zien, dan kunnen de afbeeldingen worden afgedwongen door een <code>?Print</code> queryparameter toe te voegen aan een van de hoofdstukken, <a href="./2020/accessibility?print">bekijk het hoofdstuk over toegankelijkheid in printmodus</a> voor zo'n voorbeeld. We kunnen proberen om deze functionaliteit indien nodig gemakkelijker te activeren, maar alle visualisaties hebben gedetailleerde tekstbeschrijvingen, dus we denken dat dit niet nodig is. <a hreflang="en" href="https://github.com/HTTPArchive/almanac.httparchive.org/issues">Laat het ons weten</a> als we hierin onjuist zijn.
   </p>
 
-  {# TODO - Translate this <p>
-    We recognize that some of the color choices for our visualizations do not meet WCAG color contrast requirements. We make a conscious effort to use the more contrasting colors and labels to reduce the impact of this. We hope the detailed descriptions, as well as access to the underlying data itself can help with this issue. We aim to improve the accessibility of our visualization color schemes in future years.
-  </p> #}
+  <p>
+    We erkennen dat sommige keuzes voor kleuren in onze visualisaties niet voldoen aan de kleurcontrastvereisten van de WCAG. We doen een bewuste inspanning om de meer contrasterende kleuren en opschriften te gebruiken om de impact hiervan te verminderen. We hopen dat de gedetailleerde beschrijvingen alsook toegang tot de onderliggende gegevens zelf kunnen helpen met dit probleem. We streven ernaar de toegankelijkheid van de kleurschema's in onze visualisaties de komende jaren te verbeteren.
+  </p>
 
   <p>
     In sommige hoofdstukken nemen we ook andere inhoud op de site op die niet door onszelf is gemaakt, waaronder YouTube-video's, pdf-links of links naar andere artikelen, die niet voldoen aan de strikte criteria van WCAG 2.1 niveau AAA. Zie onderstaande opmerking over externe inhoud.
