--- a/src/templates/nl/base.html
+++ b/src/templates/nl/base.html
@@ -154,7 +154,7 @@ Tenzij anders vermeld, zijn de statistieken in alle {{ supported_chapters | leng
 
 {%
   set localizedPartTitles = {
-    "I. Page Content": "I. Paginainhoud",
+    "I. Page Content": "I. Pagina-inhoud",
     "II. User Experience": "II. Gebruikerservaring",
     "III. Content Publishing": "III. Inhoudspublicatie",
     "IV. Content Distribution": "IV. Inhoudsdistributie"
