--- a/src/templates/zh-TW/base.html
+++ b/src/templates/zh-TW/base.html
@@ -83,7 +83,7 @@
 {% block reviewed_and_analyzed_by_after %}{% endblock %}
 {% block analysis_and_editing_by_after %}{% endblock %}
 
-{% block unedited %}[Unedited]{% endblock %}
+{% block unedited %}[尚未編輯]{% endblock %}
 
 {% block author %}作者{% endblock %}
 {% block authors %}作者{% endblock %}
