Forgiot to hit save!

--- a/src/templates/zh-TW/base.html
+++ b/src/templates/zh-TW/base.html
@@ -89,15 +89,15 @@
 {% block authors %}作者{% endblock %}
 
 {% block reactions %}反應{% endblock %}
-{% block source %}查看源代碼{% endblock %}
+{% block source %}查看原始碼{% endblock %}
 
-{% block like %}個喜歡{% endblock %}
-{% block repost %}次轉發{% endblock %}
-{% block reply %}條回复{% endblock %}
+{% block like %}則回覆{% endblock %}
+{% block repost %}提及{% endblock %}
+{% block reply %}個喜歡{% endblock %}
 {% block mention %}提及{% endblock %}
 {% block likes %}個贊{% endblock %}
-{% block reposts %}轉帖{% endblock %}
-{% block replies %}回复{% endblock %}
+{% block reposts %}轉發{% endblock %}
+{% block replies %}回覆{% endblock %}
 {% block mentions %}提及{% endblock %}
 {% block likesAlt %}{% endblock %}
 {% block repostsAlt %}{% endblock %}
