Web mentions translations (#2590)
* Web mentions translations

* French Webmentions translations

* Add @VictorLeP to Translators team

* Dutch translations

Webmentions + a few other items

* Ukrainian Webmentions translations

* Support Slavic plurals

* Cleanup

* Better API and corrections

* Fix case

* Improved Russian Webmentions translations

* Improved Spanish Translation

Just like "repost", I think "like" should be kept non-translated. There's no adequate translation of the word "likes" in Spanish. I also changed "mencionar" which is the verb form of the word.

* Code scanning issues

* Update src/templates/nl/base.html

Co-authored-by: Noah van der Veer <46689362+noah-vdv@users.noreply.github.com>

* Update zh-TW

* Forgiot to hit save!

Co-authored-by: Victor Le Pochat <victor.lepochat@kuleuven.be>
Co-authored-by: Kate Tymoshkina <e.teamosh@gmail.com>
Co-authored-by: Carlos Castro <62315048+carloscastromx@users.noreply.github.com>
Co-authored-by: Noah van der Veer <46689362+noah-vdv@users.noreply.github.com>

--- a/src/templates/fr/base.html
+++ b/src/templates/fr/base.html
@@ -91,14 +91,18 @@ Notre mission est de combiner les statistiques brutes et les tendances de HTTP A
 {% block reactions %}Réactions{% endblock %}
 {% block source %}Voir la source{% endblock %}
 
-{% block like %}comme{% endblock %}
-{% block repost %}republier{% endblock %}
+{% block like %}j’aime{% endblock %}
+{% block repost %}républication{% endblock %}
 {% block reply %}réponse{% endblock %}
 {% block mention %}mention{% endblock %}
-{% block likes %}aime{% endblock %}
-{% block reposts %}republier{% endblock %}
+{% block likes %}j’aimes{% endblock %}
+{% block reposts %}républications{% endblock %}
 {% block replies %}réponses{% endblock %}
 {% block mentions %}mentions{% endblock %}
+{% block likesAlt %}{% endblock %}
+{% block repostsAlt %}{% endblock %}
+{% block repliesAlt %}{% endblock %}
+{% block mentionsAlt %}{% endblock %}
 
 {% macro onTwitter(twitterHandle) %}@{{twitterHandle}} sur Twitter{% endmacro %}
 {% macro onGitHub(gitHubHandle) %}{{gitHubHandle}} sur GitHub{% endmacro %}
