User singular team role for contibutor cards

--- a/src/templates/en/base.html
+++ b/src/templates/en/base.html
@@ -206,3 +206,16 @@ Unless otherwise noted, the metrics in all of the {{ supported_chapters | length
   "translators": "Translators",
   }
 %}
+
+{% set localizedTeamRole = {
+  "analysts": "Analyst",
+  "authors": "Author",
+  "brainstormers": "Brainstormer",
+  "designers": "Designer",
+  "developers": "Developer",
+  "editors": "Editor",
+  "leads": "Project Lead",
+  "reviewers": "Reviewer",
+  "translators": "Translator",
+  }
+%}
