--- a/src/templates/fr/base.html
+++ b/src/templates/fr/base.html
@@ -206,3 +206,16 @@ Sauf indication contraire, les statistiques des {{ supported_chapters | length }
   "translators": "Traduction",
   }
 %}
+
+{% set localizedTeamRole = {
+  "analysts": "Analyse",
+  "authors": "Rédaction",
+  "brainstormers": "Réflexion",
+  "designers": "Design",
+  "developers": "Développement",
+  "editors": "Édition",
+  "leads": "Gestion de projet",
+  "reviewers": "Relecture",
+  "translators": "Traduction",
+  }
+%}
