--- a/src/templates/it/base.html
+++ b/src/templates/it/base.html
@@ -206,3 +206,16 @@ Se non diversamente specificato, le metriche in tutti i {{ supported_chapters | 
   "translators": "Traduttori",
   }
 %}
+
+{% set localizedTeamRole = {
+  "analysts": "Analista",
+  "authors": "Autore",
+  "brainstormers": "Brainstormer",
+  "designers": "Designer",
+  "developers": "Sviluppatore",
+  "editors": "Editor",
+  "leads": "Responsabili del progetto",
+  "reviewers": "Revisore",
+  "translators": "Traduttore",
+  }
+%}
