--- a/src/templates/ja/base.html
+++ b/src/templates/ja/base.html
@@ -206,3 +206,16 @@ Web Almanacは、ウェブ・コミュニティの努力によって実現して
   "translators": "翻訳者",
   }
 %}
+
+{% set localizedTeamRole = {
+  "analysts": "分析者",
+  "authors": "著作者",
+  "brainstormers": "ブレインストーマー",
+  "designers": "デザイナー",
+  "developers": "開発者",
+  "editors": "編集者",
+  "leads": "リーダー",
+  "reviewers": "レビュワー",
+  "translators": "翻訳者",
+  }
+%}
