--- a/src/templates/ru/base.html
+++ b/src/templates/ru/base.html
@@ -206,3 +206,16 @@
   "translators": "Переводчики",
   }
 %}
+
+{% set localizedTeamRole = {
+  "analysts": "Аналитик",
+  "authors": "Автор",
+  "brainstormers": "Участники мозгового штурма",
+  "designers": "Дизайнер",
+  "developers": "Разработчик",
+  "editors": "Pедактор",
+  "leads": "Руководители проекта",
+  "reviewers": "Проверяющие",
+  "translators": "Переводчик",
+  }
+%}
