--- a/src/templates/tr/base.html
+++ b/src/templates/tr/base.html
@@ -206,3 +206,17 @@ Aksi belirtilmedikçe, {{ year }} Web Almanac&#8217;ın tüm {{ supported_chapte
   "translators": "Çevirmenler",
   }
 %}
+
+{% set localizedTeamRole = {
+  "analysts": "Analist",
+  "authors": "Yazar",
+  "brainstormers": "Fikir Üreten",
+  "designers": "Tasarımcı",
+  "developers": "Geliştirici",
+  "editors": "Editor",
+  "leads": "Proje Lider",
+  "reviewers": "Gözden Geçiren",
+  "translators": "Çevirmen",
+  }
+%}
+
