--- a/src/templates/uk/base.html
+++ b/src/templates/uk/base.html
@@ -206,3 +206,16 @@
   "translators": "Перекладачі"
   }
 %}
+
+{% set localizedTeamRole = {
+  "analysts": "Аналітик",
+  "authors": "Автор",
+  "brainstormers": "Творча група",
+  "designers": "Дизайнер",
+  "developers": "Розробник",
+  "editors": "Редактор",
+  "leads": "Керівник проектів",
+  "reviewers": "Рецензент",
+  "translators": "Перекладач"
+  }
+%}
