--- a/src/templates/zh-CN/base.html
+++ b/src/templates/zh-CN/base.html
@@ -206,3 +206,16 @@
   "translators": "翻译者",
   }
 %}
+
+{% set localizedTeamRole = {
+  "analysts": "分析者",
+  "authors": "作者",
+  "brainstormers": "头脑风暴者",
+  "designers": "设计者",
+  "developers": "开发者",
+  "editors": "编辑",
+  "leads": "领导者",
+  "reviewers": "审稿者",
+  "translators": "翻译者",
+  }
+%}
