--- a/src/templates/es/base.html
+++ b/src/templates/es/base.html
@@ -205,4 +205,17 @@ A menos que se indique lo contrario, las métricas en los {{ supported_chapters 
     "reviewers": "Revisores",
     "translators": "Traductores",
     }
-  %}
+%}
+
+{% set localizedTeamRole = {
+    "analysts": "Analista",
+    "authors": "Autor",
+    "brainstormers": "Pensador",
+    "designers": "Diseñador",
+    "developers": "Desarrollador",
+    "editors": "Editor",
+    "leads": "Lider",
+    "reviewers": "Revisor",
+    "translators": "Traductor",
+    }
+%}
