--- a/src/templates/hi/base.html
+++ b/src/templates/hi/base.html
@@ -206,3 +206,16 @@ Web Almanac वेब समुदाय की मेहनत से संभ
   "translators": "अनुवादक",
   }
 %}
+
+{% set localizedTeamRole = {
+  "analysts": "विश्लेषक",
+  "authors": "लेखक",
+  "brainstormers": "ब्रैनस्टोमर ",
+  "designers": "डिजाइनर",
+  "developers": "डेवलपर",
+  "editors": "संपादक",
+  "leads": "प्रोजेक्ट लीड्स",
+  "reviewers": "समीक्षक",
+  "translators": "अनुवादक",
+  }
+%}
