--- a/src/templates/zh-TW/base.html
+++ b/src/templates/zh-TW/base.html
@@ -206,3 +206,16 @@ Web Almanac 網路年鑑是被熱情的網路社群擁抱而茁壯。 {{ self.co
   "translators": "翻譯者",
   }
 %}
+
+{% set localizedTeamRole = {
+  "analysts": "分析者",
+  "authors": "作者",
+  "brainstormers": "腦力激盪者",
+  "designers": "設計者",
+  "developers": "開發者",
+  "editors": "審稿者",
+  "leads": "專案主導者",
+  "reviewers": "審稿者",
+  "translators": "翻譯者",
+  }
+%}
