--- a/src/templates/nl/base.html
+++ b/src/templates/nl/base.html
@@ -210,7 +210,7 @@ Tenzij anders vermeld, zijn de statistieken in alle {{ supported_chapters | leng
 {% set localizedTeamRole = {
   "analysts": "Analist",
   "authors": "Auteur",
-  "brainstormers": "Brainstormers",
+  "brainstormers": "Brainstormer",
   "designers": "Ontwerper",
   "developers": "Ontwikkelaar",
   "editors": "Redacteur",
