Improved Ukrainian translation for singular team role

--- a/src/templates/uk/base.html
+++ b/src/templates/uk/base.html
@@ -201,7 +201,7 @@
   "designers": "Дизайнери",
   "developers": "Розробники",
   "editors": "Редактори",
-  "leads": "Керівники проектів",
+  "leads": "Керівники проєкту",
   "reviewers": "Рецензенти",
   "translators": "Перекладачі"
   }
@@ -214,7 +214,7 @@
   "designers": "Дизайнер",
   "developers": "Розробник",
   "editors": "Редактор",
-  "leads": "Керівник проектів",
+  "leads": "Керівник проєкту",
   "reviewers": "Рецензент",
   "translators": "Перекладач"
   }
