User singular team role for contibutor cards (#2609)
* User singular team role for contibutor cards

* Remove blank lines

* Update src/templates/nl/base.html

Co-authored-by: Victor Le Pochat <victor.lepochat@kuleuven.be>

* Improved Ukrainian translation for singular team role

Co-authored-by: Victor Le Pochat <victor.lepochat@kuleuven.be>
Co-authored-by: Kate Tymoshkina <e.teamosh@gmail.com>

--- a/src/templates/nl/base.html
+++ b/src/templates/nl/base.html
@@ -206,3 +206,16 @@ Tenzij anders vermeld, zijn de statistieken in alle {{ supported_chapters | leng
   "translators": "Vertalers",
   }
 %}
+
+{% set localizedTeamRole = {
+  "analysts": "Analist",
+  "authors": "Auteur",
+  "brainstormers": "Brainstormer",
+  "designers": "Ontwerper",
+  "developers": "Ontwikkelaar",
+  "editors": "Redacteur",
+  "leads": "Projectleider",
+  "reviewers": "Nalezer",
+  "translators": "Vertaler",
+  }
+%}
