--- a/src/templates/uk/base.html
+++ b/src/templates/uk/base.html
@@ -201,8 +201,21 @@
   "designers": "Дизайнери",
   "developers": "Розробники",
   "editors": "Редактори",
-  "leads": "Керівники проектів",
+  "leads": "Керівники проєкту",
   "reviewers": "Рецензенти",
   "translators": "Перекладачі"
+  }
+%}
+
+{% set localizedTeamRole = {
+  "analysts": "Аналітик",
+  "authors": "Автор",
+  "brainstormers": "Творча група",
+  "designers": "Дизайнер",
+  "developers": "Розробник",
+  "editors": "Редактор",
+  "leads": "Керівник проєкту",
+  "reviewers": "Рецензент",
+  "translators": "Перекладач"
   }
 %}
