--- a/src/templates/pt/base.html
+++ b/src/templates/pt/base.html
@@ -206,3 +206,16 @@ Salvo indicação em contrário, as métricas em todos os {{ supported_chapters 
   "translators": "Tradutores",
   }
 %}
+
+{% set localizedTeamRole = {
+  "analysts": "Analista",
+  "authors": "Autor",
+  "brainstormers": "Pensador",
+  "designers": "Designer",
+  "developers": "Desenvolvedor",
+  "editors": "Editor",
+  "leads": "Lider",
+  "reviewers": "Revisor",
+  "translators": "Tradutor",
+  }
+%}
