crux country methodology edit

--- a/src/templates/en/2021/methodology.html
+++ b/src/templates/en/2021/methodology.html
@@ -327,6 +327,10 @@
       </p>
 
       <p>
+        There are a few <a href="https://developers.google.com/web/tools/chrome-user-experience-report/#best-practices">best practices</a> to keep in mind when looking at data from the Chrome UX Report. One that is especially relevant to us is the advice to consider population differences among country-specific datasets. For example, the number of origins included in a country-specific dataset may not necessarily be proportionate to the population size of that country relative to others. Demographic conditions like access to the internet, reliance on native apps, or Chrome adoption may manifest as fewer origins included in the dataset.
+      </p>
+
+      <p>
         For Web Almanac metrics that reference real-world user experience data from the Chrome UX Report, the July {{ year }} dataset ({{ year }}07) is used.
       </p>
 
