--- a/src/templates/it/2021/base.html
+++ b/src/templates/it/2021/base.html
@@ -5,6 +5,6 @@
 {% block total_websites %}quasi 8,2 milioni{% endblock %}
 {% block dataset %}luglio 2020{% endblock %}
 
-{% block foreword %}
-{# TODO #}
-{% endblock %}
+  {# TODO - Translate this <p>
+    We recognize that some of the color choices for our visualizations do not meet WCAG color contrast requirements. We make a conscious effort to use the more contrasting colors and labels to reduce the impact of this. We hope the detailed descriptions, as well as access to the underlying data itself can help with this issue. We aim to improve the accessibility of our visualization color schemes in future years.
+  </p> #}
