--- a/src/templates/base/base_chapter.html
+++ b/src/templates/base/base_chapter.html
@@ -90,7 +90,7 @@ window.discussion_url="https://discuss.httparchive.org/t/{{ metadata.get('discus
     </svg>
     {{ self.queries() }}
   </a>
-  <a class="alt btn" hreflang="en" href="https://github.com/HTTPArchive/almanac.httparchive.org/issues/new?assignees=&labels=bug%2C+writing&template=2020-content-issue.md&title=Issue+with+the+2020+%5BCHAPTER%5D+chapter">
+  <a class="alt btn" hreflang="en" href="https://github.com/HTTPArchive/almanac.httparchive.org/issues/new?assignees=&labels=bug%2C+writing&title=Issue+with+the+{{ year }}+{{ metadata.get('chapter') }}+chapter">
     <svg width="18" height="18" role="img" aria-hidden="true">
       <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#github-logo"></use>
     </svg>
